# cnpryer.github.io

./: 404.html  README.md  index.html  mkdocs.yaml  pyproject.toml
blogging/: index.html
building_a_digital_twin_for_a_logistics_firm/: index.html
docs/: blogging.md  building_a_digital_twin_for_a_logistics_firm.md  index.md
search/: search_index.json
