[project]
name = "cnpryer-github-io"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chris Pryer", email = "cnpryer@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.24",
]
